...
        
    }
    
    func didTapButton() {
        print ("Hey button worked")
        
        let alert = UIAlertController(title: "Soccer", message: "Wanna play?", preferredStyle: UIAlertControllerStyle.Alert)
        alert.addAction(UIAlertAction(title: "Yes!", style: UIAlertActionStyle.Default, handler: { action in
            switch action.style{
            case .Default:
                print("default")
                print (self.myLabel.text)
                let players = Int(self.myLabel.text!)
                let newPlayers = players! + 1
...
