...
                            <constraint firstItem="0YE-pX-6ZS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Gf6-lK-Ttu"/>
                            <constraint firstItem="0YE-pX-6ZS" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="XYS-pl-UfX"/>
                            <constraint firstAttribute="trailing" secondItem="0YE-pX-6ZS" secondAttribute="trailing" id="dmT-xJ-MZK"/>
                            <constraint firstItem="0YE-pX-6ZS" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="g9A-uN-fwH"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Current Location" id="eSE-Gd-yIT"/>
                    <connections>
                        <outlet property="mapView" destination="0YE-pX-6ZS" id="WVB-0T-KPT"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
